--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,20 +8,12 @@ if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release")
 endif ()
 
-# Nie chcemy oglądać komunikatów o procentowym postępie kompilacji.
 set_property(GLOBAL PROPERTY RULE_MESSAGES OFF)
 
-# Chcemy zobaczyć polecenia wywołane przez make.
-set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_VERBOSE_MAKEFILE OFF)
 
-# Ustawiamy wspólne opcje kompilowania dla wszystkich wariantów projektu.
 set(CMAKE_C_FLAGS "-std=c11 -Wall -Wextra")
-# Domyślne opcje dla wariantów Release i Debug są sensowne.
-# Jeśli to konieczne, ustawiamy tu inne.
-# set(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG")
-# set(CMAKE_C_FLAGS_DEBUG "-g")
 
-# Wskazujemy pliki źródłowe.
 set(ROADS_ENGINE_SOURCE_FILES
         src/avl_map.c
         src/avl_map.h
@@ -45,17 +37,12 @@ set(ROADS_ENGINE_SOURCE_FILES
 set(ROADS_INTERFACE_SOURCE_FILES
         src/map_main.c src/text_interface.c src/text_interface.h)
 
-# Wskazujemy plik wykonywalny.
 add_executable(Map ${ROADS_INTERFACE_SOURCE_FILES} ${ROADS_ENGINE_SOURCE_FILES})
-add_executable(MapTest src/map_tests.c ${ROADS_ENGINE_SOURCE_FILES})
+#add_executable(MapTest src/map_tests.c ${ROADS_ENGINE_SOURCE_FILES})
 
-# Dodajemy obsługę Doxygena: sprawdzamy, czy jest zainstalowany i jeśli tak to:
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
-    # Wskazujemy lokalizacją pliku konfiguracyjnego i podajemy jego docelową lokalizację w folderze, gdzie następuje kompilacja.
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
-    # Dodajemy cel doc: użycie make doc spowoduje wywołanie doxygena z odpowiednim plikiem konfiguracyjnym w folderze kompilacji.
-    # Na wyjście zostanie wypisany odpowiedni komentarz.
     add_custom_target(doc
             ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
             WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
